--- a/source/.vscode/tasks.json
+++ b/source/.vscode/tasks.json
@@ -25,6 +25,7 @@
         "-lmingw32",
         "-lSDL2main",
         "-lSDL2",
+        "-lcurl.dll",
         "-mwindows"
       ],
       "options": {
