--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -85,5 +85,6 @@
   },
   "[cpp]": {
     "editor.defaultFormatter": "ms-vscode.cpptools"
-  }
+  },
+  "C_Cpp.default.compilerPath": "C:\\msys64\\mingw64\\bin\\g++.exe"
 }
