--- a/source/.vscode/tasks.json
+++ b/source/.vscode/tasks.json
@@ -17,20 +17,21 @@
         "-mms-bitfields",
         "-Dmain=SDL_main",
         "-o",
-        "${fileDirname}/program.exe",
+        "${fileDirname}/bin/program.exe",
         "${fileDirname}/main.cpp",
-        "-LC:/msys64/mingw64/lib",
-        "-lSDL2_mixer",
-        "-lSDL2_ttf",
-        "-lSDL2_image",
-        "-lmingw32",
-        "-lSDL2main",
-        "-lSDL2",
-        "-mwindows",
-        "-lssl",
-        "-lcrypto",
         "-LC:/msys64/mingw64/bin/../lib",
-        "-lcurl"
+        "-LC:/msys64/mingw64/lib",
+        "-mwindows",
+        "-l:libSDL2_mixer.dll.a",
+        "-l:libSDL2_ttf.dll.a",
+        "-l:libSDL2_image.dll.a",
+        "-l:libmingw32.a",
+        "-l:libSDL2main.a",
+        "-l:libSDL2.dll.a",
+        "-l:libssl.dll.a",
+        "-l:libcrypto.dll.a",
+        "-l:libcurl.dll.a",
+        "--static"
       ],
       "options": {
         "cwd": "C:/msys64/mingw64/bin"
