Fixed debugger problem. Updated tasks.json and launch.json to change build script and debugger args.

--- a/source/.vscode/tasks.json
+++ b/source/.vscode/tasks.json
@@ -5,7 +5,9 @@
       "label": "MinGW",
       "command": "C:/msys64/mingw64/bin/g++.exe",
       "args": [
-        "-ggdb",
+        "${fileDirname}/main.cpp",
+        "-mms-bitfields",
+        "-Dmain=SDL_main",
         "-IC:/msys64/mingw64/include/SDL2",
         "-IC:/msys64/mingw64/include/harfbuzz",
         "-IC:/msys64/mingw64/include/freetype2",
@@ -14,24 +16,23 @@
         "-IC:/msys64/mingw64/include/glib-2.0",
         "-IC:/msys64/mingw64/lib/glib-2.0/include",
         "-IC:/msys64/mingw64/bin/../include",
-        "-mms-bitfields",
-        "-Dmain=SDL_main",
-        "-o",
-        "${fileDirname}/bin/program.exe",
-        "${fileDirname}/main.cpp",
         "-LC:/msys64/mingw64/bin/../lib",
         "-LC:/msys64/mingw64/lib",
         "-mwindows",
-        "-l:libSDL2_mixer.dll.a",
-        "-l:libSDL2_ttf.dll.a",
-        "-l:libSDL2_image.dll.a",
-        "-l:libmingw32.a",
-        "-l:libSDL2main.a",
-        "-l:libSDL2.dll.a",
-        "-l:libssl.dll.a",
-        "-l:libcrypto.dll.a",
-        "-l:libcurl.dll.a",
-        "--static"
+        "-Wall",
+        "-Wextra",
+        "-lSDL2_mixer",
+        "-lSDL2_ttf",
+        "-lSDL2_image",
+        "-lmingw32",
+        "-lSDL2main",
+        "-lSDL2",
+        "-lssl",
+        "-lcrypto",
+        "-lcurl",
+        "-ggdb",
+        "-o",
+        "${fileDirname}/bin/program.exe"
       ],
       "options": {
         "cwd": "C:/msys64/mingw64/bin"
