--- a/source/.vscode/launch.json
+++ b/source/.vscode/launch.json
@@ -8,7 +8,7 @@
       "program": "${fileDirname}/bin/program.exe",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/",
+      "cwd": "${workspaceFolder}/bin",
       "environment": [],
       "MIMode": "gdb",
       "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
